# intial-Data-Base

./: README.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
cars/: .env  .envSample  admin.py  models.py  serializers.py  settings.py  urls.py  views.py
cars/migrations/: 0001_initial.py  0002_auto_20210811_1046.py  0003_carinfo_show.py  0004_rename_user_useraccount.py  0005_alter_carinfo_price.py
carsEcommerce/: asgi.py  settings.py  urls.py  wsgi.py
carsStore/: admin.py  apps.py  models.py  permission.py  serializer.py  urls.py  views.py
carsStore/migrations/: 0001_initial.py  0002_alter_carinfo_id_user.py  0002_auto_20210817_1903.py  0003_alter_carinfo_id_cars.py  0004_auto_20210813_1540.py  0005_auto_20210813_1853.py  0006_alter_images_image.py  0006_carinfo_primary_image.py
