[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""
authors = ["MohmmadNada <mohammad.nada_97@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
